--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
     "db:reset": "node -e \"require('./src/models').sequelize.sync({ force: true }).then(() => process.exit())\"",
     "test": "node test-bot.js"
   },
-  "keywords": ["discord", "bot", "scheduling", "robots", "webhooks"],
+  "keywords": [
+    "discord",
+    "bot",
+    "scheduling",
+    "robots",
+    "webhooks"
+  ],
   "author": "Robot Team Development",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.14.1",
-    "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.6",
+    "discord.js": "^14.19.3",
+    "dotenv": "^16.5.0",
     "node-cron": "^3.0.3",
-    "dotenv": "^16.3.1"
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.10"
   },
   "engines": {
     "node": ">=16.7.0"
+  },
+  "directories": {
+    "doc": "docs"
   }
 }
