--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Robot Team Development",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "discord.js": "^14.19.3",
@@ -30,6 +31,7 @@
     "node-cron": "^3.0.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
